# Learning

./: README.md
Cpp/MN_Lab_1/: .build.sh.swp  CMakeCache.txt  CMakeLists.txt  MN_Lab_1  MN_Lab_1.project  MN_Lab_1.workspace  Makefile  cmake_install.cmake  program  program.project  program.workspace
Cpp/MN_Lab_1/.codelite/: MN_Lab_1.session  MN_Lab_1.tags  program.session  program.tags  refactoring.db
Cpp/MN_Lab_2/: CMakeCache.txt  CMakeLists.txt  Makefile  aproksymacja  aproksymacja.project  aproksymacja.workspace  cmake_install.cmake
Cpp/MN_Lab_3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  interpolacja  interpolacja.project  interpolacja.workspace
Cpp/MN_Lab_3/.codelite/: interpolacja.session  interpolacja.tags  refactoring.db
Cpp/MN_Lab_3/src/: .RData  .Rhistory  MNrysujR.R  main.cpp  wezlyA.rex  wynA.rex
Cpp/SortingAlgorithms/: CMakeCache.txt  CMakeLists.txt  Makefile  SortingAlgorithms  SortingAlgorithms.project  SortingAlgorithms.workspace  build.sh  cmake_install.cmake
Cpp/SortingAlgorithms/.codelite/: HelloWorld.session  HelloWorld.tags  SortingAlgorithms.session  SortingAlgorithms.tags  refactoring.db
Cpp/SortingAlgorithms/src/: Sort.cpp  Sort.h  Util.cpp  Util.h  main.cpp
Java/snow-mocks-kata-java/: pom.xml
R/: ms-projekt-5.R
html,css,js/: test.txt
html,css,js/Kurs01/: encje.html
html,css,js/Kurs02/: banner.html  index01.html  index02.html  index03.html  index04.html  index05.html  index06.html  menu.html  post.html
html,css,js/Kurst01/: index.html  szablon.html
html,css,js/kurs/: .project
(+43 files in other folders)
